# qr-generator-api

./: README.md  pyproject.toml
