[tool.poetry]
name = "qr-generator-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "qr_generator_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
